--- a/Sistema_Funcional_de_Bebidas/pom.xml
+++ b/Sistema_Funcional_de_Bebidas/pom.xml
@@ -5,6 +5,13 @@
     <artifactId>Sistema_Funcional_de_Bebidas</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <dependencies>
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>42.7.4</version>
+    </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>22</maven.compiler.source>
